--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "author": "Paul Vallis",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nareshbhatia/gatsby-starter-material-ui"
+    "url": "https://github.com/vazerthon/friends-of-chitambo"
   },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "start": "npm run develop",
     "format": "prettier --write '**/*.js'",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d public"
@@ -30,7 +31,13 @@
     "react-jss": "^8.6.1"
   },
   "devDependencies": {
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^2.0.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "prettier-eslint": "^8.8.2"
   }
 }
