--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/core": "^3.0.0",
     "@material-ui/icons": "^3.0.1",
     "ajv": "^6.5.4",
+    "classnames": "^2.2.6",
     "gatsby": "next",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
