--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
     "@material-ui/core": "^3.0.0",
     "@material-ui/icons": "^3.0.1",
     "ajv": "^6.5.4",
+    "babel-plugin-styled-components": "^1.7.1",
     "classnames": "^2.2.6",
     "gatsby": "next",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-styled-components": "^3.0.0",
     "jss": "^9.8.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
-    "react-jss": "^8.6.1"
+    "react-jss": "^8.6.1",
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
     "eslint": "^5.6.0",
