--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "deploy": "gh-pages -d public"
   },
   "dependencies": {
-    "@material-ui/core": "^3.0.0",
+    "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^3.0.1",
+    "@wapps/gatsby-plugin-material-ui": "^1.0.7",
     "ajv": "^6.5.4",
     "babel-plugin-styled-components": "^1.7.1",
     "classnames": "^2.2.6",
