--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-styled-components": "^1.7.1",
     "classnames": "^2.2.6",
     "gatsby": "next",
+    "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
