--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-jss": "^8.6.1",
+    "react-slick": "^0.23.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
