--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-styled-components": "^3.0.0",
+    "gatsby-source-filesystem": "^2.0.2",
     "jss": "^9.8.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
