--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "url": "https://github.com/vazerthon/friends-of-chitambo"
   },
   "scripts": {
-    "build": "gatsby build --prefix-paths",
+    "cleancache": "rimraf .cache/*",
+    "build": "npm run cleancache && gatsby build --prefix-paths",
     "develop": "gatsby develop",
-    "start": "npm run develop",
+    "start": "npm run cleancache && npm run develop",
     "format": "prettier --write '**/*.js'",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d public"
@@ -30,12 +31,16 @@
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-styled-components": "^3.0.0",
+    "gatsby-source-filesystem": "^2.0.2",
     "jss": "^9.8.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-jss": "^8.6.1",
+    "react-slick": "^0.23.1",
+    "rimraf": "^2.6.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
