--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "ajv": "^6.5.4",
     "babel-plugin-styled-components": "^1.8.0",
     "classnames": "^2.2.6",
-    "gatsby": "next",
+    "gatsby": "^2.0.0",
     "gatsby-plugin-favicon": "^3.1.4",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-manifest": "^2.0.0",
+    "gatsby-plugin-offline": "^2.0.0",
+    "gatsby-plugin-react-helmet": "^2.0.0",
     "gatsby-plugin-styled-components": "^3.0.0",
     "gatsby-source-filesystem": "^2.0.2",
     "gatsby-transformer-json": "^2.1.4",
