--- a/package.json
+++ b/package.json
@@ -19,23 +19,24 @@
     "deploy": "gh-pages -d public"
   },
   "dependencies": {
-    "@material-ui/core": "^3.1.1",
+    "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "@wapps/gatsby-plugin-material-ui": "^1.0.7",
     "ajv": "^6.5.4",
-    "babel-plugin-styled-components": "^1.7.1",
+    "babel-plugin-styled-components": "^1.8.0",
     "classnames": "^2.2.6",
-    "gatsby": "next",
+    "gatsby": "^2.0.0",
     "gatsby-plugin-favicon": "^3.1.4",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-manifest": "^2.0.0",
+    "gatsby-plugin-offline": "^2.0.0",
+    "gatsby-plugin-react-helmet": "^2.0.0",
     "gatsby-plugin-styled-components": "^3.0.0",
     "gatsby-source-filesystem": "^2.0.2",
+    "gatsby-transformer-json": "^2.1.4",
     "jss": "^9.8.7",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-jss": "^8.6.1",
     "react-slick": "^0.23.1",
@@ -44,13 +45,13 @@
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
-    "eslint": "^5.6.0",
+    "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "gh-pages": "^2.0.0",
-    "prettier": "^1.14.2",
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.14.3",
     "prettier-eslint": "^8.8.2"
   }
 }
