--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-jss": "^8.6.1",
-    "react-slick": "^0.23.1",
+    "react-responsive-carousel": "^3.1.43",
     "rimraf": "^2.6.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^3.4.9"
