--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.2.1",
     "react-jss": "^8.6.1",
     "react-responsive-carousel": "^3.1.43",
     "rimraf": "^2.6.2",
