--- a/package.json
+++ b/package.json
@@ -19,34 +19,35 @@
     "deploy": "gh-pages -d public"
   },
   "dependencies": {
-    "@material-ui/core": "^3.2.0",
+    "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
-    "@wapps/gatsby-plugin-material-ui": "^1.0.7",
+    "@wapps/gatsby-plugin-material-ui": "^1.1.0",
     "ajv": "^6.5.4",
     "babel-plugin-styled-components": "^1.8.0",
     "classnames": "^2.2.6",
-    "gatsby": "^2.0.0",
+    "dotenv": "^6.1.0",
+    "gatsby": "^2.0.38",
     "gatsby-plugin-favicon": "^3.1.4",
-    "gatsby-plugin-manifest": "^2.0.0",
-    "gatsby-plugin-offline": "^2.0.0",
+    "gatsby-plugin-manifest": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^2.0.0",
-    "gatsby-plugin-styled-components": "^3.0.0",
-    "gatsby-source-filesystem": "^2.0.2",
-    "gatsby-transformer-json": "^2.1.4",
+    "gatsby-plugin-styled-components": "^3.0.1",
+    "gatsby-source-contentful": "^2.0.10",
+    "gatsby-source-filesystem": "^2.0.7",
+    "gatsby-transformer-json": "^2.1.5",
     "jss": "^9.8.7",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.2.1",
+    "react-icons": "^3.2.2",
     "react-jss": "^8.6.1",
     "react-responsive-carousel": "^3.1.43",
     "rimraf": "^2.6.2",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^3.4.9"
+    "styled-components": "^3.4.10"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
