--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ajv": "^6.5.4",
     "babel-plugin-styled-components": "^1.8.0",
     "classnames": "^2.2.6",
+    "date-fns": "^1.29.0",
     "dotenv": "^6.1.0",
     "gatsby": "^2.0.38",
     "gatsby-plugin-favicon": "^3.1.4",
