--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "date-fns": "^1.29.0",
     "dotenv": "^6.1.0",
     "gatsby": "^2.0.38",
+    "gatsby-image": "^2.0.20",
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-manifest": "^2.0.7",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^2.0.0",
+    "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-styled-components": "^3.0.1",
-    "gatsby-source-contentful": "^2.0.10",
+    "gatsby-source-contentful": "^2.0.14",
     "gatsby-source-filesystem": "^2.0.7",
     "gatsby-transformer-json": "^2.1.5",
+    "gatsby-transformer-sharp": "^2.1.8",
     "jss": "^9.8.7",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
