--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gatsby-plugin-manifest": "^2.0.7",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^2.0.0",
-    "gatsby-plugin-sharp": "^2.0.12",
+    "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-styled-components": "^3.0.1",
     "gatsby-source-contentful": "^2.0.14",
     "gatsby-source-filesystem": "^2.0.7",
@@ -47,7 +47,7 @@
     "react-icons": "^3.2.2",
     "react-jss": "^8.6.1",
     "react-markdown": "^4.0.3",
-    "react-responsive-carousel": "^3.1.43",
+    "react-masonry-component": "^6.2.1",
     "rimraf": "^2.6.2",
     "styled-components": "^3.4.10"
   },
