--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
       - run:
           name: Build
           command: npm run build
+      - run: git config --global user.email circleci@circleci
+      - run: git config --global user.name circleci
       - run:
           name: Deploy
           command: npm run deploy
