--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
       - run:
           name: Build
           command: npm run build
+      - add_ssh_keys:
+          fingerprints:
+            - "b8:e3:ed:cd:97:b2:5f:11:77:18:56:fb:87:ca:fb:f1"
       - run: git config --global user.email circleci@circleci
       - run: git config --global user.name circleci
       - run:
