--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,9 +30,9 @@ jobs:
             - ./node_modules
 workflows:
   version: 2
-  deploy:
+  build:
     jobs:
-      - deploy:
+      - build:
           filters:
             branches:
               only: master
