--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
       - run:
           name: Build
           command: npm run build
+  deploy:
+    steps:
       - add_ssh_keys:
           fingerprints:
             - "c4:7f:91:b9:96:d3:6f:20:ca:e6:9e:7e:09:29:72:08"
@@ -29,9 +31,16 @@ jobs:
           paths:
             - ./node_modules
 workflows:
+  version: 2
   build:
     jobs:
-      - build:
+      - build_and_deploy:
+          jobs:
+            - build
+            - deploy
+              requires:
+                - build
           filters:
             branches:
-              only: master
+              only:
+                - master
