--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             - ./node_modules
 workflows:
   version: 2
-  - build_and_deploy:
+  build_and_deploy:
       jobs:
         - build
         - deploy:
