--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "airbnb",
   "env": { "node": true },
+  "parser": "babel-eslint",
   "rules": {
     "linebreak-style": 0,
     "function-paren-newline": 0,
