--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "develop": "gatsby develop",
     "start": "npm run cleancache && npm run develop",
     "format": "prettier --write '**/*.js'",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d public",
+    "lint": "eslint --ext .js,.jsx ."
   },
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "@wapps/gatsby-plugin-material-ui": "^1.2.0",
     "ajv": "^6.7.0",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
