--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
           name: Install node modules
           command: npm install
       - run:
+          name: Lint
+          command: npm run lint
+      - run:
           name: Build
           command: npm run build
       - add_ssh_keys:
