--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint --ext .js,.jsx ."
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.0.2",
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "@wapps/gatsby-plugin-material-ui": "^1.2.0",
@@ -26,7 +27,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.0.0-alpha.21",
     "dotenv": "^6.2.0",
     "gatsby": "^2.0.91",
     "gatsby-image": "^2.0.26",
@@ -40,6 +41,7 @@
     "gatsby-transformer-json": "^2.1.7",
     "gatsby-transformer-sharp": "^2.1.10",
     "jss": "^9.8.7",
+    "material-ui-pickers": "^2.1.2",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
