Set up jest/enzyme for testing

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": "airbnb",
-  "env": { "node": true },
+  "env": { "node": true, "jest": true },
   "parser": "babel-eslint",
   "rules": {
     "linebreak-style": 0,
