--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "npm run cleancache && npm run develop",
     "format": "prettier --write '**/*.js'",
     "deploy": "gh-pages -d public",
-    "lint": "eslint --ext .js,.jsx ."
+    "lint": "eslint --ext .js,.jsx .",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.0.2",
@@ -54,13 +55,20 @@
     "styled-components": "^3.4.10"
   },
   "devDependencies": {
+    "babel-jest": "^24.1.0",
+    "babel-preset-gatsby": "^0.1.7",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.1.0",
     "prettier": "^1.15.3",
-    "prettier-eslint": "^8.8.2"
+    "prettier-eslint": "^8.8.2",
+    "react-test-renderer": "^16.8.1"
   }
 }
