--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "start": "npm run cleancache && npm run develop",
     "format": "prettier --write '**/*.js'",
     "deploy": "gh-pages -d public",
-    "lint": "eslint --ext .js,.jsx ."
+    "lint": "eslint --ext .js,.jsx .",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.0.2",
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "@wapps/gatsby-plugin-material-ui": "^1.2.0",
@@ -26,7 +28,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.0.0-alpha.21",
     "dotenv": "^6.2.0",
     "gatsby": "^2.0.91",
     "gatsby-image": "^2.0.26",
@@ -40,6 +42,7 @@
     "gatsby-transformer-json": "^2.1.7",
     "gatsby-transformer-sharp": "^2.1.10",
     "jss": "^9.8.7",
+    "material-ui-pickers": "^2.1.2",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -52,13 +55,20 @@
     "styled-components": "^3.4.10"
   },
   "devDependencies": {
+    "babel-jest": "^24.1.0",
+    "babel-preset-gatsby": "^0.1.7",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.1.0",
     "prettier": "^1.15.3",
-    "prettier-eslint": "^8.8.2"
+    "prettier-eslint": "^8.8.2",
+    "react-test-renderer": "^16.8.1"
   }
 }
