--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: npm run lint  
-      - run: npm run test
+      - run: npm run test:nowatch
 
   deploy:
     docker:
