--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,75 @@
 version: 2
 jobs:
-  build:
+  test:
     docker:
-      - image: circleci/node:8
+      - image: circleci/node
+
+    working_directory: ~/repo
+
     steps:
       - checkout
+
       - run:
           name: update npm
           command: 'sudo npm install -g npm@latest'
+
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-
+
+      - run: npm install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run: npm run lint  
+      - run: npm run test:nowatch
+
+  deploy:
+    docker:
+      - image: circleci/node
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
       - run:
-          name: Install node modules
-          command: npm install
-      - run:
-          name: Lint
-          command: npm run lint
-      - run:
-          name: Build
-          command: npm run build
+          name: update npm
+          command: 'sudo npm install -g npm@latest'
+
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-
+
+      - run: npm install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+        
       - add_ssh_keys:
           fingerprints:
             - "c4:7f:91:b9:96:d3:6f:20:ca:e6:9e:7e:09:29:72:08"
+      
       - run: git config --global user.email circleci@circleci
       - run: git config --global user.name circleci
-      - run:
-          name: Deploy
-          command: npm run deploy
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
+      - run: npm run deploy
 workflows:
   version: 2
-  build-deploy:
+  test_and_deploy:
     jobs:
-      - build:
+      - test:
           filters:
             branches:
-              only:
-                - master
-              ignore:
-                - gh-pages
+              ignore: gh-pages
+      - deploy:
+          filters:
+            branches:
+              only: master
+              ignore: gh-pages
