--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       
-      - run: npm run lint  
-      - run: npm run test
+      - run: npm run lint
+      - run: npm run test:nowatch
 
   deploy:
     docker:
