--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "friends-of-chitambo",
-  "homepage": "https://vazerthon.github.io/friends-of-chitambo",
+  "homepage": "https://friends-of-chitambo.netlify.com",
   "description": "Homepage of Friends of Chitambo",
   "version": "1.0.0",
   "license": "MIT",
@@ -11,11 +11,12 @@
   },
   "scripts": {
     "cleancache": "rimraf .cache/*",
-    "build": "npm run cleancache && gatsby build --prefix-paths",
+    "build": "npm run cleancache && gatsby build",
+    "buildgh": "npm run cleancache && gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "start": "npm run cleancache && npm run develop",
     "format": "prettier --write '**/*.js'",
-    "deploy": "gh-pages -m 'Auto Deploy [ci-skip]' -d public",
+    "ghpage": "npm run buildgp && gh-pages -d public",
     "lint": "eslint --ext .js,.jsx .",
     "test": "jest --watch",
     "test:nowatch": "jest",
