--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,12 @@
   "extends": "airbnb",
   "env": { "node": true, "jest": true },
   "parser": "babel-eslint",
+  "plugins": ["react-hooks"],
   "rules": {
     "linebreak-style": 0,
     "function-paren-newline": 0,
-    "arrow-parens": 0
+    "arrow-parens": 0,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
