--- a/package.json
+++ b/package.json
@@ -23,55 +23,56 @@
     "release": "npm run lint && npm run test:nowatch && npm run build"
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.0.2",
-    "@material-ui/core": "^3.9.0",
-    "@material-ui/icons": "^3.0.2",
-    "@wapps/gatsby-plugin-material-ui": "^1.2.0",
-    "ajv": "^6.7.0",
+    "@date-io/date-fns": "^1.3.6",
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/pickers": "^3.1.0",
+    "ajv": "^6.10.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
-    "date-fns": "^2.0.0-alpha.21",
+    "date-fns": "^2.0.0-alpha.29",
     "dotenv": "^6.2.0",
-    "gatsby": "^2.0.91",
-    "gatsby-image": "^2.0.26",
-    "gatsby-plugin-manifest": "^2.0.13",
-    "gatsby-plugin-offline": "^2.0.21",
+    "gatsby": "^2.8.5",
+    "gatsby-image": "^2.1.2",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-material-ui": "^2.0.1",
+    "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^2.0.0",
-    "gatsby-plugin-sharp": "^2.0.17",
-    "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-source-contentful": "^2.0.26",
-    "gatsby-source-filesystem": "^2.0.16",
-    "gatsby-transformer-json": "^2.1.7",
-    "gatsby-transformer-sharp": "^2.1.10",
+    "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-source-contentful": "^2.0.67",
+    "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-json": "^2.1.11",
+    "gatsby-transformer-sharp": "^2.1.21",
     "jss": "^9.8.7",
-    "material-ui-pickers": "^2.1.2",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.3.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-jss": "^8.6.1",
-    "react-markdown": "^4.0.6",
+    "react-markdown": "^4.0.8",
     "react-masonry-component": "^6.2.1",
     "rimraf": "^2.6.3",
     "styled-components": "^3.4.10"
   },
   "devDependencies": {
-    "babel-jest": "^24.1.0",
-    "babel-preset-gatsby": "^0.1.7",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^5.12.1",
+    "babel-jest": "^24.8.0",
+    "babel-preset-gatsby": "^0.1.11",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "gh-pages": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.1.0",
-    "prettier": "^1.15.3",
+    "jest": "^24.8.0",
+    "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
-    "react-test-renderer": "^16.8.1"
+    "react-test-renderer": "^16.8.6"
   }
 }
