--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "gh-pages": "^2.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
+    "netlify-plugin-subfont": "^1.0.0",
     "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "react-test-renderer": "^16.8.6"
