--- a/package.json
+++ b/package.json
@@ -24,55 +24,55 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.3.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/pickers": "^3.2.2",
-    "ajv": "^6.10.2",
-    "babel-eslint": "^10.0.2",
-    "babel-plugin-styled-components": "^1.10.6",
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
+    "ajv": "^6.12.2",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "classnames": "^2.2.6",
-    "date-fns": "^2.0.0-alpha.29",
-    "dotenv": "^8.0.0",
-    "gatsby": "^2.13.50",
-    "gatsby-image": "^2.2.8",
-    "gatsby-plugin-manifest": "^2.2.4",
-    "gatsby-plugin-material-ui": "^2.1.5",
-    "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-plugin-styled-components": "^3.1.2",
-    "gatsby-source-contentful": "^2.1.17",
-    "gatsby-source-filesystem": "^2.1.8",
-    "gatsby-transformer-json": "^2.2.2",
-    "gatsby-transformer-sharp": "^2.2.5",
-    "jss": "^9.8.7",
+    "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.23.3",
+    "gatsby-image": "^2.4.7",
+    "gatsby-plugin-manifest": "^2.4.11",
+    "gatsby-plugin-material-ui": "^2.1.9",
+    "gatsby-plugin-offline": "^3.2.9",
+    "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-styled-components": "^3.3.4",
+    "gatsby-source-contentful": "^2.3.15",
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-json": "^2.4.5",
+    "gatsby-transformer-sharp": "^2.5.5",
+    "jss": "^10.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0",
-    "react-jss": "^8.6.1",
-    "react-markdown": "^4.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^3.10.0",
+    "react-jss": "^10.2.0",
+    "react-markdown": "^4.3.1",
     "react-masonry-component": "^6.2.1",
-    "rimraf": "^2.6.3",
-    "styled-components": "^4.3.2"
+    "rimraf": "^3.0.2",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "babel-jest": "^24.8.0",
-    "babel-preset-gatsby": "^0.2.8",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-import": "^2.18.2",
+    "babel-jest": "^26.0.1",
+    "babel-preset-gatsby": "^0.4.9",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "gh-pages": "^2.1.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "gh-pages": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
-    "prettier": "^1.18.2",
-    "prettier-eslint": "^9.0.0",
-    "react-test-renderer": "^16.8.6"
+    "jest": "^26.0.1",
+    "prettier": "^2.0.5",
+    "prettier-eslint": "^11.0.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
