--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write '**/*.js'",
     "ghpage": "npm run buildgp && gh-pages -d public",
     "lint": "eslint --ext .js,.jsx .",
+    "lint:fix": "eslint --ext .js,.jsx --fix .",
     "test": "jest --watch",
     "test:nowatch": "jest",
     "release": "npm run lint && npm run test:nowatch && npm run build"
