--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "url": "https://github.com/vazerthon/friends-of-chitambo"
   },
   "scripts": {
-    "cleancache": "rimraf .cache/* && gatsby clean",
-    "build": "npm run cleancache && gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
-    "start": "npm run cleancache && npm run develop",
+    "start": "npm run develop",
     "format": "prettier --write '**/*.js'",
     "lint": "eslint --ext .js,.jsx .",
     "lint:fix": "eslint --ext .js,.jsx --fix .",
@@ -26,22 +25,19 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "ajv": "^6.12.3",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.2",
-    "gatsby-image": "^2.4.13",
-    "gatsby-plugin-manifest": "^2.4.18",
-    "gatsby-plugin-material-ui": "^2.1.9",
-    "gatsby-plugin-offline": "^3.2.17",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.19",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-contentful": "^2.3.26",
-    "gatsby-source-filesystem": "^2.3.19",
-    "gatsby-transformer-json": "^2.4.11",
-    "gatsby-transformer-sharp": "^2.5.11",
+    "gatsby": "^3.0.4",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-source-contentful": "^5.0.3",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-json": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "jss": "^10.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -55,8 +51,6 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "babel-jest": "^26.1.0",
-    "babel-preset-gatsby": "^0.5.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.4.0",
