--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "gatsby": "gatsby"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "ajv": "^6.12.3",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "ajv": "^7.2.1",
+    "babel-preset-gatsby": "^1.0.0",
     "dotenv": "^8.2.0",
     "gatsby": "^3.0.4",
+    "gatsby-core-utils": "^2.0.0",
     "gatsby-plugin-image": "^1.0.1",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-material-ui": "^2.1.10",
@@ -38,31 +40,31 @@
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-json": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
-    "jss": "^10.3.0",
+    "jss": "^10.5.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.10.0",
-    "react-jss": "^10.3.0",
-    "react-markdown": "^4.3.1",
+    "react-icons": "^4.2.0",
+    "react-jss": "^10.5.1",
+    "react-markdown": "^5.0.3",
     "react-masonry-component": "^6.2.1",
     "rimraf": "^3.0.2",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.4.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.1.0",
-    "prettier": "^2.0.5",
-    "prettier-eslint": "^11.0.0",
-    "react-test-renderer": "^16.13.1"
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
