--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": "airbnb",
-  "env": { "node": true, "jest": true },
+  "env": { "node": true },
   "parser": "@babel/eslint-parser",
   "plugins": ["react-hooks"],
   "rules": {
