--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "serve": "gatsby serve",
     "start": "npm run develop",
     "format": "prettier --write '**/*.js'",
     "lint": "eslint --ext .js,.jsx .",
