--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "prettier --write '**/*.js'",
     "lint": "eslint --ext .js,.jsx .",
     "lint:fix": "eslint --ext .js,.jsx --fix .",
-    "release": "npm run lint && npm run build",
+    "release": "npm run build && npm run lint",
     "gatsby": "gatsby"
   },
   "dependencies": {
