--- a/package.json
+++ b/package.json
@@ -10,65 +10,56 @@
     "url": "https://github.com/vazerthon/friends-of-chitambo"
   },
   "scripts": {
-    "cleancache": "rimraf .cache/* && gatsby clean",
-    "build": "npm run cleancache && gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
-    "start": "npm run cleancache && npm run develop",
+    "serve": "gatsby serve",
+    "start": "npm run develop",
     "format": "prettier --write '**/*.js'",
     "lint": "eslint --ext .js,.jsx .",
     "lint:fix": "eslint --ext .js,.jsx --fix .",
-    "test": "jest --watch",
-    "test:nowatch": "jest",
-    "release": "npm run lint && npm run test:nowatch && npm run build",
+    "release": "npm run build && npm run lint",
     "gatsby": "gatsby"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "ajv": "^6.12.3",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "classnames": "^2.2.6",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "ajv": "^7.2.1",
+    "babel-preset-gatsby": "^1.0.0",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.2",
-    "gatsby-image": "^2.4.13",
-    "gatsby-plugin-manifest": "^2.4.18",
-    "gatsby-plugin-material-ui": "^2.1.9",
-    "gatsby-plugin-offline": "^3.2.17",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.19",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-contentful": "^2.3.26",
-    "gatsby-source-filesystem": "^2.3.19",
-    "gatsby-transformer-json": "^2.4.11",
-    "gatsby-transformer-sharp": "^2.5.11",
-    "jss": "^10.3.0",
+    "gatsby": "^3.0.4",
+    "gatsby-core-utils": "^2.0.0",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-postcss": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-source-contentful": "^5.0.3",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-json": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "jss": "^10.5.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.10.0",
-    "react-jss": "^10.3.0",
-    "react-markdown": "^4.3.1",
+    "react-icons": "^4.2.0",
+    "react-jss": "^10.5.1",
+    "react-markdown": "^5.0.3",
     "react-masonry-component": "^6.2.1",
-    "rimraf": "^3.0.2",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "babel-jest": "^26.1.0",
-    "babel-preset-gatsby": "^0.5.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.4.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.1.0",
-    "prettier": "^2.0.5",
-    "prettier-eslint": "^11.0.0",
-    "react-test-renderer": "^16.13.1"
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
